# energy-api-scraper

./: .gitignore  pyproject.toml
.github/workflows/: scrape.yml
src/energy_api_scraper/: main.py
src/energy_api_scraper/scrapers/: base.py  kraken.py
